--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
         <div class="col-12 col-xl-3  text-center px-0">
           <img src="images/icon-blacklist.svg" alt="icon-blacklist" />
           <div class="custom-mt-14">
-            <h5 class="font-weight-700 text-dark-grayish-blue feature">
+            <h3 class="font-weight-700 text-dark-grayish-blue feature">
               Create blacklists
-            </h5>
+            </h3>
             <p class="text-grayish-blue feature-description custom-mt-15">
               Ensure sensitive information never makes <br class="br-mobile" />
               its way to your clipboard by excluding <br class="br-mobile" />
@@ -179,9 +179,9 @@
         >
           <img src="images/icon-text.svg" alt="icon-text" />
           <div class="custom-mt-16">
-            <h5 class="font-weight-700 text-dark-grayish-blue feature">
+            <h3 class="font-weight-700 text-dark-grayish-blue feature">
               Plain text snippets
-            </h5>
+            </h3>
             <p class="text-grayish-blue feature-description custom-mt-17">
               Remove unwanted formatting from copied <br class="br-mobile" />
               text for a consistent look.
@@ -191,9 +191,9 @@
         <div class="col-12 col-xl-3  text-center px-0">
           <img src="images/icon-preview.svg" alt="icon-preview" />
           <div class="custom-mt-16">
-            <h5 class="font-weight-700 text-dark-grayish-blue feature">
+            <h3 class="font-weight-700 text-dark-grayish-blue feature">
               Sneak preview
-            </h5>
+            </h3>
             <p class="text-grayish-blue feature-description custom-mt-17">
               Quick preview of all snippets on your Clipboard for easy access.
             </p>
@@ -340,6 +340,7 @@
               <ul>
                 <li class="list-unstyled">
                   <a
+                    aria-label="facebook"
                     class="text-decoration-none text-dark-grayish-blue"
                     href="#"
                   >
@@ -350,6 +351,7 @@
               <ul>
                 <li class="list-unstyled">
                   <a
+                    aria-label="twitter"
                     class="text-decoration-none text-dark-grayish-blue"
                     href="#"
                   >
@@ -360,6 +362,7 @@
               <ul>
                 <li class="list-unstyled">
                   <a
+                    aria-label="instagram"
                     class="text-decoration-none text-dark-grayish-blue"
                     href="#"
                   >
@@ -371,12 +374,12 @@
           </div>
         </div>
       </footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Felice Nicolas Barcellona</a>.
+      </p>
     </main>
-    <p class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Felice Nicolas Barcellona</a>.
-    </p>
   </body>
 </html>
